--- a/sample/src/main/res/layout/activity_pick_contact.xml
+++ b/sample/src/main/res/layout/activity_pick_contact.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <me.yokeyword.indexablerv.IndexableLayout
+    <me.woayli1.indexablerv.IndexableLayout
         android:id="@+id/indexableLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
