--- a/sample/src/main/res/layout/header_contact_menu.xml
+++ b/sample/src/main/res/layout/header_contact_menu.xml
@@ -8,11 +8,11 @@
     <ImageView
         android:id="@+id/img"
         android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_centerVertical="true"
-        tools:src="@mipmap/icon_1"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="16dp"
-        android:layout_height="30dp" />
+        tools:src="@mipmap/icon_1" />
 
     <TextView
         android:id="@+id/tv_title"
