--- a/sample/src/main/res/layout/item_contact.xml
+++ b/sample/src/main/res/layout/item_contact.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="16dp"
     android:background="?attr/selectableItemBackground"
     android:paddingLeft="16dp"
+    android:paddingTop="8dp"
     android:paddingRight="16dp"
-    android:paddingTop="8dp">
+    android:paddingBottom="16dp">
 
     <ImageView
         android:id="@+id/img_avatar"
@@ -21,9 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/img_avatar"
-        tools:text="张三"
         android:textColor="#373737"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        tools:text="张三" />
 
     <TextView
         android:id="@+id/tv_mobile"
@@ -32,7 +32,7 @@
         android:layout_below="@id/tv_name"
         android:layout_marginTop="12dp"
         android:layout_toRightOf="@id/img_avatar"
-        tools:text="18712345678"
-        android:textColor="#969696" />
+        android:textColor="#969696"
+        tools:text="18712345678" />
 
 </RelativeLayout>
