--- a/sample/src/main/res/layout/item_index_city.xml
+++ b/sample/src/main/res/layout/item_index_city.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<TextView
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tv_index"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#F1F1F1"
-    android:paddingBottom="8dp"
     android:paddingLeft="16dp"
     android:paddingTop="8dp"
+    android:paddingBottom="8dp"
     android:textColor="@color/colorAccent"
-    android:textSize="13sp"/>
+    android:textSize="13sp" />
