--- a/sample/src/main/res/layout/item_index_contact.xml
+++ b/sample/src/main/res/layout/item_index_contact.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -9,12 +8,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#f9f9f9"
-        android:paddingBottom="8dp"
         android:paddingLeft="24dp"
         android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     <ImageView
         android:layout_width="match_parent"
