--- a/indexablerecyclerview/src/main/res/values/indexable_default.xml
+++ b/indexablerecyclerview/src/main/res/values/indexable_default.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="default_indexBar_selectedTextColor">#f33737</color>
+    <color name="default_indexBar_selectedBackgroundColor">#00000000</color>
+    <integer name="default_indexBar_selectedBackgroundRadius">0</integer>
     <color name="default_indexBar_textColor">#8c8c8c</color>
     <dimen name="default_indexBar_textSize">14sp</dimen>
-    <color name="default_indexBar_selectedTextColor">#f33737</color>
     <dimen name="default_indexBar_textSpace">4dp</dimen>
     <drawable name="dafault_indexBar_background">@android:color/transparent</drawable>
     <dimen name="default_indexBar_layout_width">24dp</dimen>
