--- a/sample/src/main/res/layout/activity_pick_contact.xml
+++ b/sample/src/main/res/layout/activity_pick_contact.xml
@@ -10,9 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
+        app:indexBar_selectedBackgroundColor="@android:color/black"
         app:indexBar_selectedTextColor="#f33737"
         app:indexBar_textColor="@android:color/black"
         app:indexBar_textSize="14sp"
-        app:indexBar_textSpace="4dp" />
+        app:indexBar_textSpace="10dp" />
 
 </LinearLayout>
